# tab2pro

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLAN.md  README.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/tab2pro/: chordpro.py  cli.py  exceptions.py  models.py  registry.py
src/tab2pro/adapters/: base.py  dylanchords.py  rukind.py  ultimate_guitar.py  utils.py
tests/: test_adapter_dylanchords.py  test_adapter_rukind.py  test_adapter_ug.py  test_chordpro.py  test_cli.py  test_models.py  test_utils.py
tests/fixtures/dylanchords/: blowin-in-the-wind.html
tests/fixtures/rukind/: dark-star.html
tests/fixtures/ultimate_guitar/: the-weight-jsstore.html  the-weight.html
