[project]
name = "tab2pro"
version = "0.1.0"
description = "Convert chord/tab pages from music sites to ChordPro format"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "click>=8.1",
]

[project.scripts]
tab2pro = "tab2pro.cli:main"

[project.optional-dependencies]
browser = [
    "playwright>=1.44",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tab2pro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: live network tests (deselect with '-m \"not integration\"')",
]
